--- a/site/components/project/page/--mobile/page--mobile.scss
+++ b/site/components/project/page/--mobile/page--mobile.scss
@@ -8,6 +8,12 @@
     @include menu(blue-on-white);
   }
 
+  .title {
+    flex-basis: 100%;
+    @include colors(blue-on-white);
+    padding: 0 $lem $lem;
+  }
+
   .title__main {
     transform: rotate(0deg);
     flex-basis: 100%;
